<resources>
    <string name="app_name">Demo</string>
    <string name="home_menu_title">设置</string>

    <string name="drawer_open">开</string>
    <string name="drawer_close">关</string>

    <string name="main_menu_recycle">Recycle效果</string>
    <string name="main_menu_ndk">NDKdemo</string>
    <string name="main_menu_tablayout">TablayoutDemo</string>
    <string name="main_menu_edittest">EditTest</string>
    <string name="main_menu_animator">动画</string>
    <string name="main_menu_edit_hint">请输入信息</string>
    <string name="main_menu_rx">RXJAVA</string>
    <string name="main_menu_more">更多</string>
    <string name="main_menu_cloud_view">云标签</string>
    <string name="main_menu_slide_view">滑块</string>
    <string name="main_menu_wheel">滚轮</string>
    <!--<string name="main_menu_title">设置</string>-->
    <!--<string name="main_menu_title">设置</string>-->



    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>



</resources>
