<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.dhq.demo.refresh.PullToRefreshLayout
        android:id="@+id/main_refresh_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:clipToPadding="true"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/main_menu_recycle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu_recycle" />

                <Button
                    android:id="@+id/main_menu_ndk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu_ndk" />

                <Button
                    android:id="@+id/main_menu_tablayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu_tablayout" />

                <Button
                    android:id="@+id/main_menu_edittest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu_edittest" />

                <Button
                    android:id="@+id/main_menu_animator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu_animator" />

                <Button
                    android:id="@+id/main_menu_rx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu_rx" />

                <Button
                    android:id="@+id/main_menu_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu_more" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu_more" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu_more" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu_more" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu_more" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu_more" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu_more" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu_more" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu_more" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu_more" />


            </LinearLayout>

        </ScrollView>

    </com.dhq.demo.refresh.PullToRefreshLayout>

</LinearLayout>